# getstatus

./: .env.example  .gitmodules  .travis.yml  CMakeLists.txt  README.md  getstatus-config.cmake  main.cpp
include/: util.h
opt/: CMakeLists.txt
src/: CMakeLists.txt  api-interface.h  api-options.h  commit.cpp  commit.h  gitlab-api.cpp  gitlab-api.h  main.cpp  url.h  util.h
test/: CMakeLists.txt  fetch_tests.cpp  util_tests.cpp
